<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asrul.skripsi.ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="24dp"
        tools:src="@drawable/default_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        tools:text="@string/greeting" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/color_primary"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_bg_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_fb_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/banner_fg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Belajar Bahasa Isyarat menjadi lebih mudah"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_fb_banner"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMulaiBelajar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins"
        android:text="Mulai Belajar"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvDashboard" />

    <Button
        android:id="@+id/btnAlphabet"
        style="@style/CustomButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="24dp"
        android:text="Alphabet"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMulaiBelajar" />

    <Button
        android:id="@+id/btnWord"
        style="@style/CustomButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:padding="24dp"
        android:text="Kata"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAlphabet"
        app:layout_constraintTop_toTopOf="@+id/btnAlphabet" />

    <TextView
        android:id="@+id/tvBerita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="Berita"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAlphabet" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBerita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBerita"
        tools:listitem="@layout/news_item" />

    <include
        android:id="@+id/emptyState"
        layout="@layout/empty_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="?attr/actionBarSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBerita" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rvBerita"
        app:layout_constraintStart_toStartOf="@id/rvBerita"
        app:layout_constraintTop_toTopOf="@id/rvBerita" />

</androidx.constraintlayout.widget.ConstraintLayout>