...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvWord"
        android:textAlignment="center"
        android:text="Kata Sehari-hari"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWord"
        android:layout_width="match_parent"
...
