...
            style="@style/CustomButtonSolid"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/logout"
            android:layout_marginTop="52dp"
            app:layout_constraintBottom_toTopOf="@+id/tvVersion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvDev"/>

        <TextView
            android:id="@+id/tvVersion"
...
